2005-11-07  Yves Combe  <yves@ycombe.net>

	add autor's name for LuneRouge musics.

	* boards/music/background/COPYRIGHT:
	* boards/sounds/LuneRouge/COPYRIGHT:

2005-11-07  Yves Combe  <yves@ycombe.net>

	Add LaPause piano music in background music. 
	Update LuneRouge/Licence.txt to english version of the licence.

	* boards/music/background/COPYRIGHT:
	* boards/music/background/LRLaPause.ogg:
	* boards/sounds/LuneRouge/Licence.txt:

2005-11-07  Yves Combe,,,  <set EMAIL_ADDRESS environment variable>

	memo sound. Callback not used yet. new xml.in are missing in po, they needs rewriting.

	* boards/Makefile.am:
	* boards/gcompris/misc/Tux_mute.png:
	* boards/gcompris/misc/Tux_play.png:
	* boards/images/gcompris_band.png:
	* boards/sounds/LuneRouge/Licence.txt:
	* boards/sounds/LuneRouge/animaux/LRBark_1_by_Lionel_Allorge.ogg:
	* boards/sounds/LuneRouge/animaux/LRBark_2_by_Lionel_Allorge.ogg:
	* boards/sounds/LuneRouge/animaux/LRBark_3_by_Lionel_Allorge.ogg:
	* boards/sounds/LuneRouge/animaux/LRFrogs_in_pond_during_storm_by_L
	ionel_Allorge.ogg:
	* boards/sounds/LuneRouge/animaux/LRRain_in_garden_01_by_Lionel_All
	orge.ogg:
	* boards/sounds/LuneRouge/engins/LR9mm_one_shot_by_Lionel_Allorge.o
	gg:
	* boards/sounds/LuneRouge/engins/LRCars_01_by_Lionel_Allorge.ogg:
	* boards/sounds/LuneRouge/engins/LRChopper_01_by_Lionel_Allorge.ogg
	:
	* boards/sounds/LuneRouge/engins/LRChopper_02_by_Lionel_Allorge.ogg
	:
	* boards/sounds/LuneRouge/engins/LRChopper_03_by_Lionel_Allorge.ogg
	:
	* boards/sounds/LuneRouge/engins/LRExplosion_01_by_Lionel_Allorge.o
	gg:
	* boards/sounds/LuneRouge/engins/LRExplosion_02_by_Lionel_Allorge.o
	gg:
	* boards/sounds/LuneRouge/engins/LRExplosion_03_by_Lionel_Allorge.o
	gg:
	* boards/sounds/LuneRouge/engins/LRHighway_1_by_Lionel_Allorge.ogg:
	* boards/sounds/LuneRouge/engins/LRObject_falling_01_by_Lionel_Allo
	rge.ogg:
	* boards/sounds/LuneRouge/engins/LRObject_falling_02_by_Lionel_Allo
	rge.ogg: